# marlise

./: .docker-compose.yaml.swp  .env.example  .flake8  .gitignore  .gitmodules  CHANGELOG.md  COMMUNICATION_FLOW_DIAGRAMS.md  COMMUNICATION_QUICK_REFERENCE.md  Dockerfile  LICENSE  README.md  STRUCTURE.md  dev-env.sh  docker-compose.dev.yml  docker-compose.yaml  pytest.ini  test_http_api.py
.github/: copilot-instructions.md
.github/workflows/: docker-build.yaml
api_system/: Dockerfile  README.md  main.py  requirements.txt
audio-engine/: README.md
audio-engine/modhost-bridge/: .gitignore  CMakeLists.txt  MESSAGE_SCHEMAS.md  README.md  test_audio_commands.py  test_plugin_manager.py
audio-engine/modhost-bridge/src/: audio_system_manager.h  command_service.cpp  jack_manager.h  main.cpp  plugin_manager.cpp  plugin_scanner.cpp  plugin_scanner.h
audio-engine/modhost-bridge/src/audio/: audio_system_manager.h  jack_manager.cpp  jack_manager.h
audio-engine/modhost-bridge/src/core/: command_service.cpp  command_service.h  feedback_reader.cpp  feedback_reader.h  health_monitor.cpp  health_monitor.h  main.cpp
audio-engine/modhost-bridge/src/plugins/: plugin_bundle_monitor.cpp  plugin_bundle_monitor.h  plugin_manager.cpp  plugin_manager.h  plugin_scanner.cpp  plugin_scanner.h  plugin_search_engine.cpp  plugin_search_engine.h  plugin_validator.cpp  plugin_validator.h
audio-engine/modhost-bridge/src/utils/: parser.cpp  parser.h  types.cpp  types.h
audio-engine/utils/: CMakeLists.txt  test
client-interface/: README-DEV.md  README.md
client-interface/config_service/: Dockerfile  README.md  main.py
client-interface/web_api/: API_SESSION_STATE.md  Dockerfile  MIGRATION_STATUS.md  README.md  TEMPLATE_API_ENDPOINTS.md
client-interface/web_client_original/: Dockerfile  requirements.txt  standalone_template_server.py  template_server.py  test_integrated_proxy.py
client-interface/web_client_v2/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client-interface/web_client_wo_template/: README.md
config-service/: Dockerfile  README.md  docker-entrypoint.sh  main.py
config-service/data/: settings.json
data/: settings.example.json  settings.json
deployment/: README.md  install-systemd.sh
deployment/audio-engine/: Dockerfile  start.sh
deployment/docker/: Dockerfile
deployment/systemd/: marlise-bridge@.service  marlise-client-interface@.service  (+4 more)
doc/: var.json
docker/: Dockerfile  README.md  docker-compose.clean.yml  docker-compose.dev.yml  nginx.conf  wait-and-start.sh
docs/: ANALYSIS_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  COMMUNICATION_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_RECOMMENDATIONS.md  MIGRATION_GUIDE.md  QUICK_IMPROVEMENTS.md  RELOCATION_INDEX.md  START_HERE.md  VERIFICATION_REPORT.md  handlers_sequence_diagram.md
file-browser/: Dockerfile
file_api/: Dockerfile  main.py
madeline/: Dockerfile
mado/: Dockerfile.alpine  Dockerfile.trixie
mado-gov/: Dockerfile
mod-host/: Dockerfile
mod-plugin-builder/: Dockerfile  build_mod_host.sh  copy_modguis.sh
mod-sdk/: Dockerfile
proxy/: Dockerfile  nginx.conf
run/: mod-host.pid  modhost-bridge.pid
scripts/: README.md  add-timeouts.py  debug_connect.py  health-check.sh  jack_query.sh  logs-tail.sh  setup_integration_venv.sh  start-service.sh  start-session-manager-dev.sh  stop-service.sh  test-improvements.sh  wait-for.sh
session-manager/: Dockerfile  README.md  main.py  offline_pedalboard_demo.py  service.py  start_session_manager.sh  zmq_handlers.py  zmq_service.py
session_manager/: __init__.py  main.py  pyproject.toml  requirements.txt  run_session_manager.py
session_manager/handlers/: __init__.py  decorators.py  jack_handlers.py  pedalboard_handlers.py  plugin_handlers.py  system_handlers.py  zmq_handlers.py
session_manager/infrastructure/: bridge_client.py  utils.py
session_manager/managers/: config_manager.py  connection_manager.py  pedalboard_manager.py  plugin_manager.py  session_manager.py
session_manager/models/: pedalboard.py  pedalboard_service.py
session_manager/scripts/: start.sh
session_manager/services/: connection_service.py  pedalboard_service.py  zmq_service.py
session_manager/tests/: conftest.py  offline_pedalboard_demo.py  test_audio_system_handlers.py  test_auto_create_default.py  test_complete_workflow.py  test_connection_service.py  test_integration_load_minimal_pedalboard.py  test_integration_load_plugin.py  test_integration_pedalboard_and_connection.py  test_integration_real_world_connections.py  test_persistence.py  test_plugin_manager.py  test_session_control_service.py  test_zeromq_service.py
static/: index.html  styles.css
tests/: INTEGRATION_TEST_PLAN.md  README.md  debug_test.sh  debug_test2.sh  final_demo.sh  health_check.sh  pytest.ini  run_client_interface_server.py  run_integration_tests.sh  setup_verification.sh  smoke_test.sh  smoke_test_operational.sh  status_report.sh  test_api_completeness.py  test_api_integration.py  test_config_api_integration.py  test_effects_list.py  test_hybrid_services.sh  test_real_services.sh  test_static_site_smoke.py  test_zmq_communication.py  zmq_config_server.py
(+200 files in other folders)
